--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,7 +2,8 @@ services:
   - type: web
     name: ece496-translation-api
     env: node
-    buildCommand: npm install
+    rootDir: backend
+    buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
